更新首頁 - 在課程總覽中加入多媒體整合連結

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="html-basics.html">HTML基礎</a></li>
                 <li><a href="css-basics.html">CSS基礎</a></li>
                 <li><a href="layout.html">版面配置</a></li>
+                <li><a href="multimedia.html">多媒體整合</a></li>
                 <li><a href="effects.html">動態效果</a></li>
                 <li><a href="examples.html">實作範例</a></li>
             </ul>
@@ -79,10 +80,11 @@
                     <div class="week-number">第7週</div>
                     <h3>多媒體整合</h3>
                     <ul>
-                        <li>背景影像</li>
-                        <li>聲音、影片</li>
+                        <li>背景圖片設定</li>
+                        <li>影片背景效果</li>
+                        <li>CSS圖案背景</li>
                     </ul>
-                    <a href="effects.html" class="learn-btn">開始學習</a>
+                    <a href="multimedia.html" class="learn-btn">開始學習</a>
                 </div>
 
                 <div class="week-card">
