--- a/html-basics.html
+++ b/html-basics.html
@@ -21,6 +21,7 @@
                 <li><a href="html-basics.html" class="active">HTML基礎</a></li>
                 <li><a href="css-basics.html">CSS基礎</a></li>
                 <li><a href="layout.html">版面配置</a></li>
+                <li><a href="multimedia.html">多媒體整合</a></li>
                 <li><a href="effects.html">動態效果</a></li>
                 <li><a href="examples.html">實作範例</a></li>
             </ul>
