更新所有頁面導航 - 加入多媒體整合連結

--- a/examples.html
+++ b/examples.html
@@ -125,6 +125,7 @@
                 <li><a href="html-basics.html">HTML基礎</a></li>
                 <li><a href="css-basics.html">CSS基礎</a></li>
                 <li><a href="layout.html">版面配置</a></li>
+                <li><a href="multimedia.html">多媒體整合</a></li>
                 <li><a href="effects.html">動態效果</a></li>
                 <li><a href="examples.html" class="active">實作範例</a></li>
             </ul>
