--- a/layout.html
+++ b/layout.html
@@ -21,6 +21,7 @@
                 <li><a href="html-basics.html">HTML基礎</a></li>
                 <li><a href="css-basics.html">CSS基礎</a></li>
                 <li><a href="layout.html" class="active">版面配置</a></li>
+                <li><a href="multimedia.html">多媒體整合</a></li>
                 <li><a href="effects.html">動態效果</a></li>
                 <li><a href="examples.html">實作範例</a></li>
             </ul>
@@ -192,7 +193,7 @@
                 </ul>
             </div>
             
-            <p><strong>下一步：</strong> 掌握版面配置後，可以學習 <a href="effects.html">動態效果</a> 來為網頁增加互動性。</p>
+            <p><strong>下一步：</strong> 掌握版面配置後，可以學習 <a href="multimedia.html">多媒體整合</a> 來為網頁添加背景圖片或影片。</p>
         </main>
 
         <!-- 頁尾 -->
