--- a/css-basics.html
+++ b/css-basics.html
@@ -10,7 +10,7 @@
     <div class="container">
         <!-- 頁首 -->
         <header class="header">
-            <h1>🎨 CSS樣式技術</h1>
+            <h1>CSS樣式技術</h1>
             <p>學習CSS的基本語法和樣式設計</p>
         </header>
 
@@ -172,7 +172,7 @@ p {
 
         <!-- 頁尾 -->
         <footer class="footer">
-            <p>&copy; 2025 網頁設計課程筆記 | 基於 Notion 課堂筆記製作</p>
+            <p>&copy; 網頁設計課程筆記 | 基於李希榆的課堂筆記製作</p>
         </footer>
     </div>
 </body>
