--- a/html-basics.html
+++ b/html-basics.html
@@ -10,7 +10,7 @@
     <div class="container">
         <!-- 頁首 -->
         <header class="header">
-            <h1>📝 HTML基礎技術</h1>
+            <h1>HTML基礎技術</h1>
             <p>學習HTML標籤的基本使用方法</p>
         </header>
 
@@ -126,7 +126,7 @@
 
         <!-- 頁尾 -->
         <footer class="footer">
-            <p>&copy; 2025 網頁設計課程筆記 | 基於 Notion 課堂筆記製作</p>
+            <p>&copy; 網頁設計課程筆記 | 基於李希榆的課堂筆記製作</p>
         </footer>
     </div>
 </body>
