--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>📚 網頁設計課程筆記</title>
+    <title>李希榆的網頁設計課程筆記</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <!-- 頁首 -->
         <header class="header">
-            <h1>📚 網頁設計課程筆記</h1>
-            <p>簡單的HTML & CSS學習資源</p>
+            <h1>網頁設計課程筆記</h1>
+            <p>上完半學期的網頁設計後，整理出的HTML & CSS 學習筆記</p>
         </header>
 
         <!-- 導航列 -->
@@ -29,7 +29,7 @@
 
         <!-- 主內容區 -->
         <main class="main">
-            <h2>📅 課程總覽</h2>
+            <h2>課程總覽</h2>
             
             <div class="week-grid">
                 <div class="week-card">
@@ -92,7 +92,6 @@
                     <h3>動態效果</h3>
                     <ul>
                         <li>CSS動態效果</li>
-                        <li>過場動畫</li>
                         <li>互動式元件</li>
                     </ul>
                     <a href="effects.html" class="learn-btn">開始學習</a>
@@ -100,7 +99,7 @@
             </div>
 
             <div class="summary-box">
-                <h3>💡 學習重點</h3>
+                <h3>學習重點</h3>
                 <div class="summary-grid">
                     <div class="summary-item">
                         <h4>HTML核心</h4>
@@ -124,7 +123,7 @@
 
         <!-- 頁尾 -->
         <footer class="footer">
-            <p>&copy; 2025 網頁設計課程筆記 | 基於 Notion 課堂筆記製作</p>
+            <p>&copy; 網頁設計課程筆記 | 基於李希榆的課堂筆記製作</p>
         </footer>
     </div>
 </body>
