--- a/layout.html
+++ b/layout.html
@@ -10,7 +10,7 @@
     <div class="container">
         <!-- 頁首 -->
         <header class="header">
-            <h1>📀 版面配置技術</h1>
+            <h1>版面配置技術</h1>
             <p>學習CSS版面配置的基本方法</p>
         </header>
 
@@ -198,7 +198,7 @@
 
         <!-- 頁尾 -->
         <footer class="footer">
-            <p>&copy; 2025 網頁設計課程筆記 | 基於 Notion 課堂筆記製作</p>
+            <p>&copy; 網頁設計課程筆記 | 基於李希榆的課堂筆記製作</p>
         </footer>
     </div>
 </body>
